<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <ImageView
        android:id="@+id/img_imovel"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_infoImovel"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:fontFamily="@font/samsungsans"
            android:text="@string/txt_lojaVenda"
            android:textColor="@color/textoPrimario" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_infoTelefone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/samsungsans"
                android:text="@string/txt_infoImovelContato"
                android:textColor="@color/textoPrimario" />

            <TextView
                android:id="@+id/txt_telefoneImovel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/samsungsans"
                android:text="@string/txt_telefone"
                android:textColor="@color/textoPrimario" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_infoTamanho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/samsungsans"
                android:text="@string/txt_tamanho"
                android:textColor="@color/textoPrimario" />

            <TextView
                android:id="@+id/txt_tamanhoImovel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/samsungsans"
                android:text="@string/txt_tamanho"
                android:textColor="@color/textoPrimario" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_infoConstrucao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/construction"
            android:fontFamily="@font/samsungsans"
            android:paddingEnd="20dp"
            android:text="@string/txt_construcao"
            android:textColor="@color/textoPrimario" />

        <TextView
            android:id="@+id/txt_infoClique"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/samsungsans"
            android:text="@string/txt_cliqueMais"
            android:textAlignment="center"
            android:textColor="@color/textoSecundario" />
    </LinearLayout>

</LinearLayout>
