<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoreAqui2Activity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="181dp"
        android:layout_height="161dp"
        android:layout_marginTop="128dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/txt_logo"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/btn_novo"
        android:layout_width="@dimen/wBtn"
        android:layout_height="@dimen/hBtn"
        android:layout_marginTop="@dimen/distanciaBotoesLogo"
        android:backgroundTint="@color/corBotao"
        android:fontFamily="@font/samsungsans"
        android:text="@string/btn_novo"
        android:textSize="15sp"
        app:cornerRadius="10dp"
        app:icon="@drawable/add"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/btn_visualizar"
        android:layout_width="@dimen/wBtn"
        android:layout_height="@dimen/hBtn"
        android:layout_marginTop="@dimen/distanciaEntreBotoes"
        android:backgroundTint="@color/corBotao"
        android:fontFamily="@font/samsungsans"
        android:text="@string/btn_visualizar"
        android:textSize="15sp"
        app:cornerRadius="10dp"
        app:icon="@drawable/search"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/btn_novo" />

    <Button
        android:id="@+id/btn_mapa"
        android:layout_width="@dimen/wBtn"
        android:layout_height="@dimen/hBtn"
        android:layout_marginTop="@dimen/distanciaEntreBotoes"
        android:backgroundTint="@color/corBotao"
        android:fontFamily="@font/samsungsans"
        android:text="@string/btn_mapa"
        android:textSize="15sp"
        app:cornerRadius="10dp"
        app:icon="@drawable/map"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/btn_visualizar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>